syntax = "proto2";

import "dccl/option_extensions.proto";
import "goby/protobuf/option_extensions.proto";
import "goby/moos/protobuf/goby_moos_app.proto";
import "goby/middleware/protobuf/frontseat_config.proto";

package goby.apps.moos.protobuf;

message iFrontSeatConfig
{
    option (dccl.msg).unit_system = "si";

    optional goby.moos.protobuf.GobyMOOSAppConfig common = 1;

    required goby.middleware.frontseat.protobuf.Config frontseat_cfg = 2;

    message MOOSVariables
    {
        optional string prefix = 1 [
            default = "IFS_",
            (goby.field).description =
                "Prefix all MOOS variable names with this string"
        ];

        optional string raw_out = 10 [default = "RAW_OUT"];
        optional string raw_in = 11 [default = "RAW_IN"];

        optional string command_request = 12 [default = "COMMAND_REQUEST"];
        optional string command_response = 13 [default = "COMMAND_RESPONSE"];

        optional string data_from_frontseat = 14 [default = "DATA_IN"];
        optional string data_to_frontseat = 15 [default = "DATA_OUT"];

        optional string status = 16 [default = "STATUS"];

        optional string node_status = 17 [default = "NODE_STATUS"];
    }
    optional MOOSVariables moos_var = 20;

    message LegacyOperations
    {
        optional bool subscribe_desired = 1 [
            default = true,
            (goby.field).description =
                "Convert the IvP Helm DESIRED_HEADING, DESIRED_SPEED, "
                "DESIRED_DEPTH variables into a CommandRequest::desired_course "
                "message."
        ];

        optional bool subscribe_ctd = 2 [
            default = false,
            (goby.field).description =
                "Convert the individual CTD_CONDUCTIVITY, CTD_TEMPERATURE, "
                "CTD_PRESSURE, CTD_SALINITY variables into a "
                "FrontSeatInterfaceData::ctd_sample message."
        ];

        optional bool subscribe_acomms_raw = 3 [
            default = false,
            (goby.field).description =
                "Convert the individual ACOMMS_RAW_INCOMING, "
                "ACOMMS_RAW_OUTGOING variables into a FrontSeatInterfaceData "
                "message with extensions BluefinExtraData::micro_modem_raw_out "
                "and BluefinExtraData::micro_mdoem_raw_in set."
        ];

        optional bool pub_sub_bf_commands = 4 [
            default = false,
            (goby.field).description =
                "Convert all of the following MOOS variables into "
                "corresponding enumerations of the BluefinExtraCommands "
                "extension of the CommandRequest message: BUOYANCY_CONTROL to "
                "BluefinExtraCommands::BUOYANCY_ADJUST, TRIM_CONTROL to "
                "BluefinExtraCommands::TRIM_ADJUST, FRONTSEAT_BHVOFF to "
                "BluefinExtraCommands::CANCEL_CURRENT_BEHAVIOR, "
                "FRONTSEAT_SILENT to BluefinExtraCommands::SILENT_MODE, "
                "BACKSEAT_ABORT to BluefinExtraCommands::ABORT_MISSION. Also, "
                "use the MOOS variable PENDING_SURFACE to trigger the "
                "BluefinExtraCommands::GPS_REQUEST."
        ];

        optional bool publish_nav = 12 [
            default = true,
            (goby.field).description =
                "Publish NAV_X, NAV_Y, NAV_LAT, NAV_LONG, NAV_Z, NAV_DEPTH, "
                "NAV_YAW, NAV_HEADING, NAV_SPEED, NAV_PITCH, NAV_ROLL and "
                "NAV_ALTITUDE from the NodeStatus message within "
                "FrontSeatInterfaceData"
        ];

        optional bool publish_fs_bs_ready = 11 [
            default = false,
            (goby.field).description =
                "Publish the MOOS variable FRONTSEAT_READY=1 when the "
                "frontseat state is FRONTSEAT_ACCEPTING_COMMANDS, and "
                "FRONTSEAT_READY=0 otherwise. Publish BACKSEAT_READY=1 when "
                "the helm state is HELM_DRIVE, and BACKSEAT_READY=0 "
                "otherwise."
        ];
    }

    optional LegacyOperations legacy_cfg = 30
        [(goby.field).description =
             "Numerous options to automatically convert legacy variables "
             "(e.g., from iHuxley) into the iFrontSeat messages. Generally new "
             "projects will not use any of these options and thus this "
             "configuration block can be omitted."];
}
